--- a/Stocky.Client/Components/DialogWindows/ProductDialogs/DeleteProductDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/ProductDialogs/DeleteProductDialog.razor
@@ -2,11 +2,23 @@
 
 <MudDialog>
     <DialogContent>
-        <MudText Typo="Typo.h6">@ContentText</MudText>
+        @if (_isLoading)
+        {
+            <MudProgressCircular Indeterminate="true" Color="Color.Primary" />
+        }
+        else
+        {
+            <MudText Typo="Typo.h6">@ContentText</MudText>
+        }
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Secondary" OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="@Color" OnClick="Delete" Variant="Variant.Filled">@ButtonText</MudButton>
+        <MudButton Color="Color.Secondary" OnClick="Cancel" Disabled="_isLoading">Отмена</MudButton>
+        <MudButton Color="@Color"
+                   OnClick="Delete"
+                   Variant="Variant.Filled"
+                   Disabled="_isLoading">
+            @ButtonText
+        </MudButton>
     </DialogActions>
 </MudDialog>
 
@@ -14,19 +26,21 @@
     [CascadingParameter] MudDialogInstance MudDialog { get; set; } = default!;
 
     [Parameter] public int ProductId { get; set; }
-    [Parameter] public string ContentText { get; set; } = "Are you sure?";
-    [Parameter] public string ButtonText { get; set; } = "OK";
-    [Parameter] public Color Color { get; set; } = Color.Primary;
+    [Parameter] public string ContentText { get; set; } = "Вы уверены, что хотите удалить этот продукт?";
+    [Parameter] public string ButtonText { get; set; } = "Удалить";
+    [Parameter] public Color Color { get; set; } = Color.Error;
 
-    private bool _isLoading;
+    private bool _isLoading = false;
+
     private void Cancel() => MudDialog.Cancel();
 
     private async Task Delete()
     {
         _isLoading = true;
+
         try
         {
-            string url = $"http://localhost:5191/Product/DeleteUser?Id={ProductId}";
+            var url = $"http://localhost:5191/Product/DeleteUser?Id={ProductId}";
             var response = await Http.DeleteAsync(url);
 
             if (response.IsSuccessStatusCode)
@@ -35,15 +49,18 @@
             }
             else
             {
-                Console.WriteLine("Error deleting user: " + response.ReasonPhrase);
+                Console.WriteLine("Ошибка при удалении продукта: " + response.ReasonPhrase);
+                MudDialog.Close(DialogResult.Ok(false));
             }
         }
         catch (Exception ex)
         {
-            Console.WriteLine("Error deleting user: " + ex.Message);
+            Console.WriteLine("Ошибка при удалении продукта: " + ex.Message);
+            MudDialog.Close(DialogResult.Ok(false));
         }
-
-        _isLoading = false;
+        finally
+        {
+            _isLoading = false;
+        }
     }
-
 }
