--- a/Stocky.Client/Components/DialogWindows/UserDialogs/CreateUserDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/CreateUserDialog.razor
@@ -3,16 +3,17 @@
 
 <MudDialog>
     <DialogContent>
-        <MudText Typo="Typo.h6">Create New User</MudText>
-        <MudTextField Label="Name" @bind-Value="UserModel.Name" Variant="Variant.Outlined" Margin="Margin.Dense" />
-        <MudTextField Label="Phone" @bind-Value="UserModel.Phone" Variant="Variant.Outlined" Margin="Margin.Dense" />
-        <MudTextField Label="Address" @bind-Value="UserModel.Address" Variant="Variant.Outlined" Margin="Margin.Dense" />
+        <MudText Typo="Typo.h6">Создать нового пользователя</MudText>
+        <MudTextField Label="Имя" @bind-Value="UserModel.Name" Variant="Variant.Outlined" Margin="Margin.Dense" />
+        <MudTextField Label="Телефон" @bind-Value="UserModel.Phone" Variant="Variant.Outlined" Margin="Margin.Dense" />
+        <MudTextField Label="Адрес" @bind-Value="UserModel.Address" Variant="Variant.Outlined" Margin="Margin.Dense" />
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Secondary" OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="Color.Primary" OnClick="Submit" Variant="Variant.Filled">Create</MudButton>
+        <MudButton Color="Color.Secondary" OnClick="Cancel">Отмена</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Submit" Variant="Variant.Filled">Создать</MudButton>
     </DialogActions>
 </MudDialog>
+
 @code {
     [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
     [Parameter] public User UserModel { get; set; } = new();
