--- a/Stocky.Client/Components/DialogWindows/UserDialogs/DeleteUserDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/DeleteUserDialog.razor
@@ -8,7 +8,7 @@
         <MudText Typo="Typo.h6">@ContentText</MudText>
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Secondary" OnClick="Cancel">Cancel</MudButton>
+        <MudButton Color="Color.Secondary" OnClick="Cancel">Отмена</MudButton>
         <MudButton Color="@Color" OnClick="DeleteUser" Variant="Variant.Filled">@ButtonText</MudButton>
     </DialogActions>
 </MudDialog>
@@ -17,8 +17,8 @@
     [CascadingParameter] MudDialogInstance MudDialog { get; set; } = null!;
 
     [Parameter] public int UserId { get; set; }
-    [Parameter] public string ContentText { get; set; } = "Are you sure?";
-    [Parameter] public string ButtonText { get; set; } = "OK";
+    [Parameter] public string ContentText { get; set; } = "Вы уверены?";
+    [Parameter] public string ButtonText { get; set; } = "ОК";
     [Parameter] public Color Color { get; set; } = Color.Primary;
 
     private bool _isLoading;
