--- a/Stocky.Client/Components/DialogWindows/UserDialogs/EditUserDialog.razor
+++ b/Stocky.Client/Components/DialogWindows/UserDialogs/EditUserDialog.razor
@@ -31,13 +31,13 @@
 
 <MudDialog>
     <DialogContent>
-        <MudText Typo="Typo.h6">Edit User</MudText>
-        <MudTextField Label="Name" @bind-Value="UserModel.Name" Variant="Variant.Outlined" Margin="Margin.Dense"/>
-        <MudTextField Label="Phone" @bind-Value="UserModel.Phone" Variant="Variant.Outlined" Margin="Margin.Dense"/>
-        <MudTextField Label="Address" @bind-Value="UserModel.Address" Variant="Variant.Outlined" Margin="Margin.Dense"/>
+        <MudText Typo="Typo.h6">Редактировать пользователя</MudText>
+        <MudTextField Label="Имя" @bind-Value="UserModel.Name" Variant="Variant.Outlined" Margin="Margin.Dense"/>
+        <MudTextField Label="Телефон" @bind-Value="UserModel.Phone" Variant="Variant.Outlined" Margin="Margin.Dense"/>
+        <MudTextField Label="Адрес" @bind-Value="UserModel.Address" Variant="Variant.Outlined" Margin="Margin.Dense"/>
     </DialogContent>
     <DialogActions>
-        <MudButton Color="Color.Secondary" OnClick="Cancel">Cancel</MudButton>
-        <MudButton Color="Color.Primary" OnClick="Submit" Variant="Variant.Filled">Save</MudButton>
+        <MudButton Color="Color.Secondary" OnClick="Cancel">Отмена</MudButton>
+        <MudButton Color="Color.Primary" OnClick="Submit" Variant="Variant.Filled">Сохранить</MudButton>
     </DialogActions>
 </MudDialog>
