--- a/Stocky.Client/Components/Pages/UnAuthorized.razor
+++ b/Stocky.Client/Components/Pages/UnAuthorized.razor
@@ -1,5 +1,12 @@
 @page "/UnAuthorized"
 @using MudBlazor.Components.Layout
-@layout EmptyLayout    
+@layout EmptyLayout
 
-<p color="black">You are not authorized to access this page.</p>
+<MudPaper Class="pa-6 mx-auto mt-12" Style="max-width: 400px;" Elevation="4" Square="true">
+    <MudText Typo="Typo.h5" Color="Color.Error" Align="Align.Center" GutterBottom="true">
+        Доступ запрещён
+    </MudText>
+    <MudText Typo="Typo.body1" Align="Align.Center">
+        You are not authorized to access this page.
+    </MudText>
+</MudPaper>
